--- a/aplication/config/config.php.sample
+++ b/aplication/config/config.php.sample
@@ -8,4 +8,4 @@ $SETTINGS = array();
 $SETTINGS['user'] = 'admin';
 $SETTINGS['password'] = 'admin';
 $SETTINGS['dbFilePath'] = 'db/dbFile.csv';
-$SETTINGS['relativPath'] = '/ffmpegapp/aplication';
+$SETTINGS['relativPath'] = '/';
