first version that works

--- a/aplication/config/config.php.sample
+++ b/aplication/config/config.php.sample
@@ -8,4 +8,11 @@ $SETTINGS = array();
 $SETTINGS['user'] = 'admin';
 $SETTINGS['password'] = 'admin';
 $SETTINGS['dbFilePath'] = 'db/dbFile.csv';
-$SETTINGS['relativPath'] = '/';
+$SETTINGS['relativPath'] = '/ffmpegapp/aplication';
+$SETTINGS['hostAddress'] = $_SERVER['SERVER_ADDR'];
+$SETTINGS['hostPort'] = '11234';
+$SETTINGS['subjectEmailSuccess'] = 'Transcoding successful';
+$SETTINGS['subjectEmailFail'] = 'Transcoding failed';
+$SETTINGS['emailHeaders'] = 'From: example@example.com' . "\r\n";
+$SETTINGS['outputDirPath'] = 'output';
+$SETTINGS['serverName'] = $_SERVER['SERVER_NAME'];
